include_directories(${COMP_SMARTLIVING_DIR})
include_directories(${COMP_SMARTLIVING_DIR}/include)
include_directories(${COMP_SMARTLIVING_DIR}/include/exports)
include_directories(${COMP_SMARTLIVING_DIR}/include/imports)
include_directories(${COMP_SMARTLIVING_DIR}/src/)
include_directories(${COMP_SMARTLIVING_DIR}/src/board)
include_directories(${COMP_SMARTLIVING_DIR}/src/infra)
include_directories(${COMP_SMARTLIVING_DIR}/src/infra/log)
include_directories(${COMP_SMARTLIVING_DIR}/src/infra/system)
include_directories(${COMP_SMARTLIVING_DIR}/src/infra/system/facility)
include_directories(${COMP_SMARTLIVING_DIR}/src/infra/utils)
include_directories(${COMP_SMARTLIVING_DIR}/src/infra/utils/digest)
include_directories(${COMP_SMARTLIVING_DIR}/src/infra/utils/misc)
include_directories(${COMP_SMARTLIVING_DIR}/src/protocol)
include_directories(${COMP_SMARTLIVING_DIR}/src/protocol/alcs)
include_directories(${COMP_SMARTLIVING_DIR}/src/protocol/coap)
include_directories(${COMP_SMARTLIVING_DIR}/src/protocol/coap/cloud)
include_directories(${COMP_SMARTLIVING_DIR}/src/protocol/coap/local)
include_directories(${COMP_SMARTLIVING_DIR}/src/protocol/http)
include_directories(${COMP_SMARTLIVING_DIR}/src/protocol/http2)
include_directories(${COMP_SMARTLIVING_DIR}/src/protocol/http2/nghttp2)
include_directories(${COMP_SMARTLIVING_DIR}/src/protocol/mqtt)
include_directories(${COMP_SMARTLIVING_DIR}/src/protocol/mqtt/MQTTPacket)
include_directories(${COMP_SMARTLIVING_DIR}/src/protocol/mqtt/client)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/hal)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/hal/os)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/hal/os/macos)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/hal/os/ubuntu)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/hal/os/win7)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/hal/ssl)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/hal/ssl/itls)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/hal/ssl/mbedtls)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/hal/ssl/openssl)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/tls)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/tls/include)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/tls/include/mbedtls)
include_directories(${COMP_SMARTLIVING_DIR}/src/ref-impl/tls/library)
include_directories(${COMP_SMARTLIVING_DIR}/src/sdk-impl)
include_directories(${COMP_SMARTLIVING_DIR}/src/sdk-impl/deprecated_linkkit)
include_directories(${COMP_SMARTLIVING_DIR}/src/security)
include_directories(${COMP_SMARTLIVING_DIR}/src/security/pro)
include_directories(${COMP_SMARTLIVING_DIR}/src/security/pro/crypto)
include_directories(${COMP_SMARTLIVING_DIR}/src/security/pro/id2)
include_directories(${COMP_SMARTLIVING_DIR}/src/security/pro/itls)
include_directories(${COMP_SMARTLIVING_DIR}/src/security/pro/km)
include_directories(${COMP_SMARTLIVING_DIR}/src/services)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/awss)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/dev_bind)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/dev_bind/os)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/dev_bind/os/product)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/http2_stream)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/http2_stream/)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/linkkit)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/linkkit/cm)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/linkkit/cm/include)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/linkkit/dev_reset)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/linkkit/dm)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/linkkit/dm/client)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/linkkit/dm/server)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/mdal)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/mdal/mal)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/mdal/mal/ica)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/mdal/mal/ica/test)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/mdal/sal)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/mdal/sal/include)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/mdal/sal/include/internal)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/mdal/sal/src)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/ota)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/ota/impl)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/ota/prot)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/shadow)
include_directories(${COMP_SMARTLIVING_DIR}/src/services/subdev)
include_directories(${COMP_SMARTLIVING_DIR}/src/tools)
include_directories(${COMP_SMARTLIVING_DIR}/src/tools/linkkit_tsl_convert)
include_directories(${COMP_SMARTLIVING_DIR}/src/tools/linkkit_tsl_convert/include)
include_directories(${COMP_SMARTLIVING_DIR}/src/tools/linkkit_tsl_convert/src)

file(GLOB src_services_http2_stream_SRCS
    ${COMP_SMARTLIVING_DIR}/src/services/http2_stream/*.c
)

add_library (http2_stream OBJECT
    ${src_services_http2_stream_SRCS}
    ${EXTRA_C_SOURCES}
)

